added a -O csv option and stub files for CSV output for scamper trace; csv outformat:  for each hop: version;unitID;timestamp;src;dst;method;status;hop;addr;rtt and updated codebase to make it work with multiple targets given as an input file and updated the scamper/Makefile.am; and updated the man page

--- a/scamper/scamper.1
+++ b/scamper/scamper.1
@@ -175,6 +175,10 @@ results with a scripting langage.  A better approach is to output
 results in warts format, and to use
 .Xr sc_warts2json 1 .
 .It
+.Sy csv
+output results in csv format.  Suitable for processing measurement
+results from the SamKnows platform.
+.It
 .Sy planetlab:
 tell scamper it is running on a planetlab system.  Necessary to use
 planetlab's safe raw sockets.
